made register_ask_ki  func in ThermostatAPI.ipynb

--- a/shared_data/ThermostatAPI.ipynb
+++ b/shared_data/ThermostatAPI.ipynb
@@ -224,7 +224,7 @@
     "    print(f'Headers:\\n {headers2}\\n')\n",
     "    print(f'Smart connector data:\\n {sc_data}\\n')\n",
     "    print(response)\n",
-    "    print(response.text)\n",
+    "    print(f'Response text: {response.text}')\n",
     "\n",
     "create_smart_connector()"
    ],
@@ -234,9 +234,127 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 55,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "URL:\n",
+      " http://127.0.0.1:8280/rest\n",
+      "\n",
+      "Headers:\n",
+      " {'Content-Type': 'application/json', 'Knowledge-Base-Id': 'http://127.0.0.1:8000/thermostat'}\n",
+      "\n",
+      "<Response [200 OK]>\n",
+      "Response text:\n",
+      "[{\"knowledgeBaseId\":\"http://127.0.0.1:8000/thermostat\",\"knowledgeBaseName\":\"Thermostat API v0.0.1\",\"knowledgeBaseDescription\":\"Thermostat API v0.0.1 for the Smart Home\",\"reasonerEnabled\":false}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check if the smart connector is registered\n",
+    "def check_smart_connector():\n",
+    "    headers2 = {\n",
+    "        #'accept': 'application/json,\n",
+    "        'Content-Type': 'application/json',\n",
+    "        'Knowledge-Base-Id': \"http://127.0.0.1:8000/thermostat\",\n",
+    "\n",
+    "    }\n",
+    "\n",
+    "    response = httpx.get(URL + \"/sc\", headers=headers2)\n",
+    "\n",
+    "    print(f'URL:\\n {URL}\\n')\n",
+    "    print(f'Headers:\\n {headers2}\\n')\n",
+    "    print(response)\n",
+    "    print(f'Response text:\\n{response.text}')\n",
+    "\n",
+    "check_smart_connector()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "URL:\n",
+      " http://127.0.0.1:8280/rest\n",
+      "\n",
+      "Headers:\n",
+      " {'Content-Type': 'application/json', 'Knowledge-Base-Id': 'http://127.0.0.1:8000/thermostat'}\n",
+      "\n",
+      "<Response [200 OK]>\n",
+      "Response text:\n",
+      "{\"knowledgeInteractionId\":\"http://127.0.0.1:8000/thermostat/interaction/8a276462-0f9c-44ca-8619-bd55a0e3ccb8\"}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# register an ASK Knowledge Interaction with the smart connector\n",
+    "def register_ask_ki():\n",
+    "    headers2 = {\n",
+    "        'Content-Type': 'application/json',\n",
+    "        'Knowledge-Base-Id': \"http://127.0.0.1:8000/thermostat\",\n",
+    "    }\n",
+    "\n",
+    "    ask_ki_data = {\n",
+    "        \"knowledgeInteractionType\": \"AskKnowledgeInteraction\",\n",
+    "        \"graphPattern\": \"?s <https://www.vizlore.com/predicate> ?o\",\n",
+    "    }\n",
+    "\n",
+    "    response = httpx.post(URL + \"/sc/ki\", headers=headers2, json=ask_ki_data)\n",
+    "\n",
+    "    print(f'URL:\\n {URL}\\n')\n",
+    "    print(f'Headers:\\n {headers2}\\n')\n",
+    "    print(response)\n",
+    "    print(f'Response text:\\n{response.text}')\n",
+    "\n",
+    "register_ask_ki()\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "URL:\n",
+      " http://127.0.0.1:8280/rest\n",
+      "\n",
+      "Headers:\n",
+      " {'Content-Type': 'application/json', 'Knowledge-Base-Id': 'http://127.0.0.1:8000/thermostat'}\n",
+      "\n",
+      "<Response [200 OK]>\n",
+      "Response text:\n",
+      "[{\"knowledgeBaseId\":\"http://127.0.0.1:8000/thermostat\",\"knowledgeBaseName\":\"Thermostat API v0.0.1\",\"knowledgeBaseDescription\":\"Thermostat API v0.0.1 for the Smart Home\",\"reasonerEnabled\":false}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "check_smart_connector()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "# check if the ASK Knowledge Interaction is registered\n"
+   ],
    "metadata": {
     "collapsed": false
    }
