made list_all_kis func in ThermostatAPI.ipynb

--- a/shared_data/ThermostatAPI.ipynb
+++ b/shared_data/ThermostatAPI.ipynb
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 58,
    "outputs": [
     {
      "name": "stdout",
@@ -337,23 +337,26 @@
       "\n",
       "<Response [200 OK]>\n",
       "Response text:\n",
-      "[{\"knowledgeBaseId\":\"http://127.0.0.1:8000/thermostat\",\"knowledgeBaseName\":\"Thermostat API v0.0.1\",\"knowledgeBaseDescription\":\"Thermostat API v0.0.1 for the Smart Home\",\"reasonerEnabled\":false}]\n"
+      "[{\"knowledgeInteractionId\":\"http://127.0.0.1:8000/thermostat/interaction/8a276462-0f9c-44ca-8619-bd55a0e3ccb8\",\"knowledgeInteractionType\":\"AskKnowledgeInteraction\",\"communicativeAct\":{\"requiredPurposes\":[\"https://w3id.org/knowledge-engine/InformPurpose\"],\"satisfiedPurposes\":[\"https://w3id.org/knowledge-engine/InformPurpose\"]},\"graphPattern\":\"?s <https://www.vizlore.com/predicate> ?o . \"}]\n"
      ]
     }
    ],
    "source": [
-    "check_smart_connector()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "# check if the ASK Knowledge Interaction is registered\n"
+    "# check if the ASK Knowledge Interaction is registered\n",
+    "def list_all_kis():\n",
+    "    headers2 = {\n",
+    "        'Content-Type': 'application/json',\n",
+    "        'Knowledge-Base-Id': \"http://127.0.0.1:8000/thermostat\",\n",
+    "    }\n",
+    "\n",
+    "    response = httpx.get(URL + \"/sc/ki\", headers=headers2)\n",
+    "\n",
+    "    print(f'URL:\\n {URL}\\n')\n",
+    "    print(f'Headers:\\n {headers2}\\n')\n",
+    "    print(response)\n",
+    "    print(f'Response text:\\n{response.text}')\n",
+    "\n",
+    "list_all_kis()\n"
    ],
    "metadata": {
     "collapsed": false
