checkpoint ThermostatAPI.ipynb

--- a/shared_data/ThermostatAPI.ipynb
+++ b/shared_data/ThermostatAPI.ipynb
@@ -364,6 +364,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 26,
    "metadata": {
     "collapsed": false,
