added kb_id as class param and also endpoint and funcs ThermostatAPI.ipynb also added Minitor2

--- a/shared_data/ThermostatAPI.ipynb
+++ b/shared_data/ThermostatAPI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -34,11 +34,19 @@
     "                 name: str,\n",
     "                 temperature: int,\n",
     "                 humidity: int,\n",
-    "                 mode: str):\n",
+    "                 mode: str,\n",
+    "                 kb_id: str,\n",
+    "                 ):\n",
+    "\n",
     "        self.name = name\n",
     "        self.temperature = temperature\n",
     "        self.humidity = humidity\n",
     "        self.mode = mode\n",
+    "        self.kb_id = kb_id\n",
+    "\n",
+    "    # Getters\n",
+    "    def get_name(self):\n",
+    "        return self.name\n",
     "\n",
     "    def get_temperature(self):\n",
     "        return self.temperature\n",
@@ -49,12 +57,13 @@
     "    def get_mode(self):\n",
     "        return self.mode\n",
     "\n",
-    "    def get_name(self):\n",
-    "        return self.name\n",
+    "    def get_kb_id(self):\n",
+    "        return self.kb_id\n",
     "\n",
     "    def get_json(self):\n",
     "        return self.__dict__\n",
     "\n",
+    "    # Setters\n",
     "    def set_temperature(self, temperature: int):\n",
     "        self.temperature = temperature\n",
     "\n",
@@ -70,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -83,12 +92,14 @@
     "thermostat = Thermostat(name=\"Thermostat\",\n",
     "                        temperature=20,\n",
     "                        humidity=50,\n",
-    "                        mode=\"cool\")"
+    "                        mode=\"cool\",\n",
+    "                        kb_id=\"http://127.0.0.1:8000/thermostat\",\n",
+    "                        )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -98,9 +109,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "{'name': 'Thermostat', 'temperature': 20, 'humidity': 50, 'mode': 'cool'}"
+      "text/plain": "{'name': 'Thermostat',\n 'temperature': 20,\n 'humidity': 50,\n 'mode': 'cool',\n 'kb_id': 'http://127.0.0.1:8000/thermostat'}"
      },
-     "execution_count": 80,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -129,6 +140,10 @@
     "async def get_thermostat():\n",
     "    return thermostat.get_json()\n",
     "\n",
+    "@app.get(\"/thermostat/name\")\n",
+    "async def get_name():\n",
+    "    return thermostat.get_name()\n",
+    "\n",
     "@app.get(\"/thermostat/temperature\")\n",
     "async def get_temperature():\n",
     "    return thermostat.get_temperature()\n",
@@ -141,9 +156,9 @@
     "async def get_mode():\n",
     "    return thermostat.get_mode()\n",
     "\n",
-    "@app.get(\"/thermostat/name\")\n",
-    "async def get_name():\n",
-    "    return thermostat.get_name()\n",
+    "@app.get(\"/thermostat/kb_id\")\n",
+    "async def get_kb_id():\n",
+    "    return thermostat.get_kb_id()\n",
     "\n",
     "@app.put(\"/thermostat/temperature\")\n",
     "async def set_temperature(temperature: int):\n",
@@ -168,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
@@ -184,7 +199,7 @@
       " {'knowledgeBaseId': 'http://127.0.0.1:8000/thermostat', 'knowledgeBaseName': 'Thermostat API v0.0.1', 'knowledgeBaseDescription': 'Thermostat API v0.0.1 for the Smart Home', 'reasonerEnabled': 'false'}\n",
       "\n",
       "<Response [200 OK]>\n",
-      "\n"
+      "Response text: \n"
      ]
     }
    ],
@@ -194,6 +209,12 @@
     "\n",
     "# Knowledge engine REST API URL\n",
     "URL = \"http://127.0.0.1:8280/rest\"\n",
+    "\n",
+    "# Knowledge engine REST API headers\n",
+    "HEADERS = {\n",
+    "    'Content-Type': 'application/json',\n",
+    "    'Knowledge-Base-Id': \"http://127.0.0.1:8000/thermostat\",\n",
+    "}\n",
     "\n",
     "# Creating a smart connector\n",
     "def create_smart_connector():\n",
@@ -205,23 +226,11 @@
     "        \"reasonerEnabled\": \"false\",\n",
     "    }\n",
     "\n",
-    "    headers = {\n",
-    "        'accept': 'application/json; charset=UTF-8',\n",
-    "        \"knowledgeBaseId\": \"http://127.0.0.1:8000/thermostat\",\n",
-    "    }\n",
-    "\n",
-    "    headers2 = {\n",
-    "        #'accept': 'application/json,\n",
-    "        'Content-Type': 'application/json',\n",
-    "        'Knowledge-Base-Id': \"http://127.0.0.1:8000/thermostat\",\n",
-    "\n",
-    "    }\n",
-    "\n",
     "    # Registering the smart connector\n",
-    "    response = httpx.post(URL + \"/sc\", headers=headers2, json=sc_data)\n",
+    "    response = httpx.post(URL + \"/sc\", headers=HEADERS, json=sc_data)\n",
     "\n",
     "    print(f'URL:\\n {URL}\\n')\n",
-    "    print(f'Headers:\\n {headers2}\\n')\n",
+    "    print(f'Headers:\\n {HEADERS}\\n')\n",
     "    print(f'Smart connector data:\\n {sc_data}\\n')\n",
     "    print(response)\n",
     "    print(f'Response text: {response.text}')\n",
@@ -234,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
@@ -277,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 15,
    "outputs": [
     {
      "name": "stdout",
@@ -291,31 +300,35 @@
       "\n",
       "<Response [200 OK]>\n",
       "Response text:\n",
-      "{\"knowledgeInteractionId\":\"http://127.0.0.1:8000/thermostat/interaction/8a276462-0f9c-44ca-8619-bd55a0e3ccb8\"}\n"
+      "{\"knowledgeInteractionId\":\"http://127.0.0.1:8000/thermostat/interaction/0285bc86-13d4-4835-a2b7-80f61b3d1523\"}\n"
      ]
     }
    ],
    "source": [
-    "# register an ASK Knowledge Interaction with the smart connector\n",
-    "def register_ask_ki():\n",
+    "# register an ANSWER Knowledge Interaction with the smart connector\n",
+    "def register_answer_ki():\n",
     "    headers2 = {\n",
     "        'Content-Type': 'application/json',\n",
     "        'Knowledge-Base-Id': \"http://127.0.0.1:8000/thermostat\",\n",
     "    }\n",
     "\n",
-    "    ask_ki_data = {\n",
-    "        \"knowledgeInteractionType\": \"AskKnowledgeInteraction\",\n",
-    "        \"graphPattern\": \"?s <https://www.vizlore.com/predicate> ?o\",\n",
+    "    answer_ki_data = {\n",
+    "        \"knowledgeInteractionType\": \"AnswerKnowledgeInteraction\",\n",
+    "        \"prefixes\": {\"rdf\": \"http://www.w3.org/1999/02/22-rdf-syntax-ns#\",\n",
+    "                    \"ex\": \"http://example.org/\",\n",
+    "                     },\n",
+    "\n",
+    "        \"graphPattern\":\"?d rdf:type 'Device' . ?d ex:hasName 'Thermostat'. ?d ex:hasTemperature ?temperature. ?d ex:hasHumidity ?humidity. ?d ex:hasMode ?mode. ?d ex:hasName ?name.\"\n",
     "    }\n",
     "\n",
-    "    response = httpx.post(URL + \"/sc/ki\", headers=headers2, json=ask_ki_data)\n",
+    "    response = httpx.post(URL + \"/sc/ki\", headers=headers2, json=answer_ki_data)\n",
     "\n",
     "    print(f'URL:\\n {URL}\\n')\n",
     "    print(f'Headers:\\n {headers2}\\n')\n",
     "    print(response)\n",
     "    print(f'Response text:\\n{response.text}')\n",
     "\n",
-    "register_ask_ki()\n"
+    "register_answer_ki()\n"
    ],
    "metadata": {
     "collapsed": false
@@ -323,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 16,
    "outputs": [
     {
      "name": "stdout",
@@ -335,14 +348,14 @@
       "Headers:\n",
       " {'Content-Type': 'application/json', 'Knowledge-Base-Id': 'http://127.0.0.1:8000/thermostat'}\n",
       "\n",
-      "<Response [200 OK]>\n",
+      "<Response [404 Not Found]>\n",
       "Response text:\n",
-      "[{\"knowledgeInteractionId\":\"http://127.0.0.1:8000/thermostat/interaction/8a276462-0f9c-44ca-8619-bd55a0e3ccb8\",\"knowledgeInteractionType\":\"AskKnowledgeInteraction\",\"communicativeAct\":{\"requiredPurposes\":[\"https://w3id.org/knowledge-engine/InformPurpose\"],\"satisfiedPurposes\":[\"https://w3id.org/knowledge-engine/InformPurpose\"]},\"graphPattern\":\"?s <https://www.vizlore.com/predicate> ?o . \"}]\n"
+      "{\"messageType\":\"error\",\"message\":\"This knowledge base has been suspended due to inactivity. Please reregister the knowledge base and its knowledge interactions.\"}\n"
      ]
     }
    ],
    "source": [
-    "# check if the ASK Knowledge Interaction is registered\n",
+    "# check if the Knowledge Interaction is registered\n",
     "def list_all_kis():\n",
     "    headers2 = {\n",
     "        'Content-Type': 'application/json',\n",
@@ -382,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -391,14 +404,35 @@
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'nest_asyncio' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "Input \u001B[0;32mIn [26]\u001B[0m, in \u001B[0;36m<cell line: 2>\u001B[0;34m()\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;66;03m# Running the API\u001B[39;00m\n\u001B[1;32m      2\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;18m__name__\u001B[39m \u001B[38;5;241m==\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m__main__\u001B[39m\u001B[38;5;124m\"\u001B[39m:\n\u001B[0;32m----> 3\u001B[0m     \u001B[43mnest_asyncio\u001B[49m\u001B[38;5;241m.\u001B[39mapply()\n\u001B[1;32m      4\u001B[0m     \u001B[38;5;66;03m#uvicorn.run(app, host=\"0.0.0.0\", port=8001)\u001B[39;00m\n\u001B[1;32m      5\u001B[0m     uvicorn\u001B[38;5;241m.\u001B[39mrun(app)\n",
-      "\u001B[0;31mNameError\u001B[0m: name 'nest_asyncio' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:     Started server process [4964]\n",
+      "INFO:     Waiting for application startup.\n",
+      "INFO:     Application startup complete.\n",
+      "INFO:     Uvicorn running on http://127.0.0.1:8000 (Press CTRL+C to quit)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:     127.0.0.1:42736 - \"GET /docs HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:42736 - \"GET /openapi.json HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:42742 - \"GET /docs HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:42742 - \"GET /openapi.json HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:47088 - \"GET /docs HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:47088 - \"GET /openapi.json HTTP/1.1\" 200 OK\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:     Shutting down\n",
+      "INFO:     Waiting for application shutdown.\n",
+      "INFO:     Application shutdown complete.\n",
+      "INFO:     Finished server process [4964]\n"
      ]
     }
    ],
@@ -409,18 +443,6 @@
     "    #uvicorn.run(app, host=\"0.0.0.0\", port=8001)\n",
     "    uvicorn.run(app)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
