--- a/shared_data/ThermostatAPI.ipynb
+++ b/shared_data/ThermostatAPI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -37,7 +37,6 @@
     "                 mode: str,\n",
     "                 kb_id: str,\n",
     "                 ):\n",
-    "\n",
     "        self.name = name\n",
     "        self.temperature = temperature\n",
     "        self.humidity = humidity\n",
@@ -45,21 +44,6 @@
     "        self.kb_id = kb_id\n",
     "\n",
     "    # Getters\n",
-    "    def get_name(self):\n",
-    "        return self.name\n",
-    "\n",
-    "    def get_temperature(self):\n",
-    "        return self.temperature\n",
-    "\n",
-    "    def get_humidity(self):\n",
-    "        return self.humidity\n",
-    "\n",
-    "    def get_mode(self):\n",
-    "        return self.mode\n",
-    "\n",
-    "    def get_kb_id(self):\n",
-    "        return self.kb_id\n",
-    "\n",
     "    def get_json(self):\n",
     "        return self.__dict__\n",
     "\n",
@@ -74,12 +58,15 @@
     "        self.mode = mode\n",
     "\n",
     "    def set_name(self, name: str):\n",
-    "        self.name = name\n"
+    "        self.name = name\n",
+    "\n",
+    "    def set_kb_id(self, kb_id: str):\n",
+    "        self.kb_id = kb_id\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -99,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -111,7 +98,7 @@
      "data": {
       "text/plain": "{'name': 'Thermostat',\n 'temperature': 20,\n 'humidity': 50,\n 'mode': 'cool',\n 'kb_id': 'http://127.0.0.1:8000/thermostat'}"
      },
-     "execution_count": 10,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -136,49 +123,73 @@
     "async def root():\n",
     "    return {\"message\": \"Welcome to the thermostat API\"}\n",
     "\n",
+    "\n",
     "@app.get(\"/thermostat\")\n",
     "async def get_thermostat():\n",
     "    return thermostat.get_json()\n",
     "\n",
+    "\n",
     "@app.get(\"/thermostat/name\")\n",
     "async def get_name():\n",
-    "    return thermostat.get_name()\n",
+    "    return thermostat.name\n",
+    "\n",
     "\n",
     "@app.get(\"/thermostat/temperature\")\n",
     "async def get_temperature():\n",
-    "    return thermostat.get_temperature()\n",
+    "    return thermostat.temperature\n",
+    "\n",
     "\n",
     "@app.get(\"/thermostat/humidity\")\n",
     "async def get_humidity():\n",
-    "    return thermostat.get_humidity()\n",
+    "    return thermostat.humidity\n",
+    "\n",
     "\n",
     "@app.get(\"/thermostat/mode\")\n",
     "async def get_mode():\n",
-    "    return thermostat.get_mode()\n",
+    "    return thermostat.mode\n",
+    "\n",
     "\n",
     "@app.get(\"/thermostat/kb_id\")\n",
     "async def get_kb_id():\n",
-    "    return thermostat.get_kb_id()\n",
+    "    return thermostat.kb_id\n",
+    "\n",
+    "@app.put(\"/thermostat\")\n",
+    "async def set_thermostat(commons: Thermostat = Depends()):\n",
+    "    thermostat.set_name(commons.name)\n",
+    "    thermostat.set_temperature(commons.temperature)\n",
+    "    thermostat.set_humidity(commons.humidity)\n",
+    "    thermostat.set_mode(commons.mode)\n",
+    "    thermostat.set_kb_id(commons.kb_id)\n",
+    "\n",
+    "    return thermostat.get_json()\n",
     "\n",
     "@app.put(\"/thermostat/temperature\")\n",
     "async def set_temperature(temperature: int):\n",
     "    thermostat.set_temperature(temperature)\n",
-    "    return thermostat.get_temperature()\n",
+    "    return thermostat.temperature\n",
+    "\n",
     "\n",
     "@app.put(\"/thermostat/humidity\")\n",
     "async def set_humidity(humidity: int):\n",
     "    thermostat.set_humidity(humidity)\n",
-    "    return thermostat.get_humidity()\n",
+    "    return thermostat.humidity\n",
+    "\n",
     "\n",
     "@app.put(\"/thermostat/mode\")\n",
     "async def set_mode(mode: str):\n",
     "    thermostat.set_mode(mode)\n",
-    "    return thermostat.get_mode()\n",
+    "    return thermostat.mode\n",
+    "\n",
     "\n",
     "@app.put(\"/thermostat/name\")\n",
     "async def set_name(name: str):\n",
     "    thermostat.set_name(name)\n",
-    "    return thermostat.get_name()\n"
+    "    return thermostat.name\n",
+    "\n",
+    "@app.put(\"/thermostat/kb_id\")\n",
+    "async def set_kb_id(kb_id: str):\n",
+    "    thermostat.set_kb_id(kb_id)\n",
+    "    return thermostat.kb_id\n"
    ]
   },
   {
@@ -213,8 +224,9 @@
     "# Knowledge engine REST API headers\n",
     "HEADERS = {\n",
     "    'Content-Type': 'application/json',\n",
-    "    'Knowledge-Base-Id': \"http://127.0.0.1:8000/thermostat\",\n",
+    "    'Knowledge-Base-Id': thermostat.kb_id,\n",
     "}\n",
+    "\n",
     "\n",
     "# Creating a smart connector\n",
     "def create_smart_connector():\n",
@@ -234,6 +246,7 @@
     "    print(f'Smart connector data:\\n {sc_data}\\n')\n",
     "    print(response)\n",
     "    print(f'Response text: {response.text}')\n",
+    "\n",
     "\n",
     "create_smart_connector()"
    ],
@@ -278,6 +291,7 @@
     "    print(response)\n",
     "    print(f'Response text:\\n{response.text}')\n",
     "\n",
+    "\n",
     "check_smart_connector()"
    ],
    "metadata": {
@@ -315,10 +329,10 @@
     "    answer_ki_data = {\n",
     "        \"knowledgeInteractionType\": \"AnswerKnowledgeInteraction\",\n",
     "        \"prefixes\": {\"rdf\": \"http://www.w3.org/1999/02/22-rdf-syntax-ns#\",\n",
-    "                    \"ex\": \"http://example.org/\",\n",
+    "                     \"ex\": \"http://example.org/\",\n",
     "                     },\n",
     "\n",
-    "        \"graphPattern\":\"?d rdf:type 'Device' . ?d ex:hasName 'Thermostat'. ?d ex:hasTemperature ?temperature. ?d ex:hasHumidity ?humidity. ?d ex:hasMode ?mode. ?d ex:hasName ?name.\"\n",
+    "        \"graphPattern\": \"?d rdf:type 'Device' . ?d ex:hasName 'Thermostat'. ?d ex:hasTemperature ?temperature. ?d ex:hasHumidity ?humidity. ?d ex:hasMode ?mode. ?d ex:hasName ?name.\"\n",
     "    }\n",
     "\n",
     "    response = httpx.post(URL + \"/sc/ki\", headers=headers2, json=answer_ki_data)\n",
@@ -327,6 +341,7 @@
     "    print(f'Headers:\\n {headers2}\\n')\n",
     "    print(response)\n",
     "    print(f'Response text:\\n{response.text}')\n",
+    "\n",
     "\n",
     "register_answer_ki()\n"
    ],
@@ -369,6 +384,7 @@
     "    print(response)\n",
     "    print(f'Response text:\\n{response.text}')\n",
     "\n",
+    "\n",
     "list_all_kis()\n"
    ],
    "metadata": {
@@ -395,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -417,12 +433,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:     127.0.0.1:42736 - \"GET /docs HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:42736 - \"GET /openapi.json HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:42742 - \"GET /docs HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:42742 - \"GET /openapi.json HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:47088 - \"GET /docs HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:47088 - \"GET /openapi.json HTTP/1.1\" 200 OK\n"
+      "INFO:     127.0.0.1:56950 - \"GET /docs HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:56950 - \"GET /openapi.json HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:56950 - \"GET /docs HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:56950 - \"GET /openapi.json HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:59394 - \"PUT /thermostat?name=thermoboi%20200&temperature=69&humidity=100&mode=chill&kb_id=%22http%3A%2F%2F127.0.0.1%3A8000%2Fthermostat3%22 HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:49844 - \"PUT /thermostat?name=thermoboi%20200&temperature=69&humidity=100&mode=chill&kb_id=http%3A%2F%2F127.0.0.1%3A8000%2Fthermostat3 HTTP/1.1\" 200 OK\n"
      ]
     },
     {
@@ -443,6 +459,15 @@
     "    #uvicorn.run(app, host=\"0.0.0.0\", port=8001)\n",
     "    uvicorn.run(app)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
