removed unnecessary methods in ThermostatAPI.ipynb

--- a/shared_data/ThermostatAPI.ipynb
+++ b/shared_data/ThermostatAPI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -41,32 +41,12 @@
     "        self.temperature = temperature\n",
     "        self.humidity = humidity\n",
     "        self.mode = mode\n",
-    "        self.kb_id = kb_id\n",
-    "\n",
-    "    # Getters\n",
-    "    def get_json(self):\n",
-    "        return self.__dict__\n",
-    "\n",
-    "    # Setters\n",
-    "    def set_temperature(self, temperature: int):\n",
-    "        self.temperature = temperature\n",
-    "\n",
-    "    def set_humidity(self, humidity: int):\n",
-    "        self.humidity = humidity\n",
-    "\n",
-    "    def set_mode(self, mode: str):\n",
-    "        self.mode = mode\n",
-    "\n",
-    "    def set_name(self, name: str):\n",
-    "        self.name = name\n",
-    "\n",
-    "    def set_kb_id(self, kb_id: str):\n",
     "        self.kb_id = kb_id\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -86,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -98,18 +78,18 @@
      "data": {
       "text/plain": "{'name': 'Thermostat',\n 'temperature': 20,\n 'humidity': 50,\n 'mode': 'cool',\n 'kb_id': 'http://127.0.0.1:8000/thermostat'}"
      },
-     "execution_count": 38,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "thermostat.get_json()"
+    "thermostat.__dict__"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -126,7 +106,7 @@
     "\n",
     "@app.get(\"/thermostat\")\n",
     "async def get_thermostat():\n",
-    "    return thermostat.get_json()\n",
+    "    return thermostat.__dict__\n",
     "\n",
     "\n",
     "@app.get(\"/thermostat/name\")\n",
@@ -155,40 +135,40 @@
     "\n",
     "@app.put(\"/thermostat\")\n",
     "async def set_thermostat(commons: Thermostat = Depends()):\n",
-    "    thermostat.set_name(commons.name)\n",
-    "    thermostat.set_temperature(commons.temperature)\n",
-    "    thermostat.set_humidity(commons.humidity)\n",
-    "    thermostat.set_mode(commons.mode)\n",
-    "    thermostat.set_kb_id(commons.kb_id)\n",
+    "    thermostat.name = commons.name\n",
+    "    thermostat.temperature = commons.temperature\n",
+    "    thermostat.humidity = commons.humidity\n",
+    "    thermostat.mode = commons.mode\n",
+    "    thermostat.kb_id = commons.kb_id\n",
     "\n",
-    "    return thermostat.get_json()\n",
+    "    return thermostat.__dict__\n",
     "\n",
     "@app.put(\"/thermostat/temperature\")\n",
     "async def set_temperature(temperature: int):\n",
-    "    thermostat.set_temperature(temperature)\n",
+    "    thermostat.temperature = temperature\n",
     "    return thermostat.temperature\n",
     "\n",
     "\n",
     "@app.put(\"/thermostat/humidity\")\n",
     "async def set_humidity(humidity: int):\n",
-    "    thermostat.set_humidity(humidity)\n",
+    "    thermostat.humidity = humidity\n",
     "    return thermostat.humidity\n",
     "\n",
     "\n",
     "@app.put(\"/thermostat/mode\")\n",
     "async def set_mode(mode: str):\n",
-    "    thermostat.set_mode(mode)\n",
+    "    thermostat.mode = mode\n",
     "    return thermostat.mode\n",
     "\n",
     "\n",
     "@app.put(\"/thermostat/name\")\n",
     "async def set_name(name: str):\n",
-    "    thermostat.set_name(name)\n",
+    "    thermostat.name = name\n",
     "    return thermostat.name\n",
     "\n",
     "@app.put(\"/thermostat/kb_id\")\n",
     "async def set_kb_id(kb_id: str):\n",
-    "    thermostat.set_kb_id(kb_id)\n",
+    "    thermostat.kb_id = kb_id\n",
     "    return thermostat.kb_id\n"
    ]
   },
@@ -411,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -433,12 +413,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:     127.0.0.1:56950 - \"GET /docs HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:56950 - \"GET /openapi.json HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:56950 - \"GET /docs HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:56950 - \"GET /openapi.json HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:59394 - \"PUT /thermostat?name=thermoboi%20200&temperature=69&humidity=100&mode=chill&kb_id=%22http%3A%2F%2F127.0.0.1%3A8000%2Fthermostat3%22 HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:49844 - \"PUT /thermostat?name=thermoboi%20200&temperature=69&humidity=100&mode=chill&kb_id=http%3A%2F%2F127.0.0.1%3A8000%2Fthermostat3 HTTP/1.1\" 200 OK\n"
+      "INFO:     127.0.0.1:50538 - \"GET /docs HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:50538 - \"GET /openapi.json HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:50538 - \"GET / HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:40288 - \"GET /thermostat HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:55934 - \"PUT /thermostat?name=coolboi2000&temperature=200&humidity=200&mode=chill&kb_id=kbid HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:35588 - \"GET /thermostat/name HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:53262 - \"PUT /thermostat/name?name=newname HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:50962 - \"GET /thermostat/temperature HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:57928 - \"PUT /thermostat/temperature?temperature=100 HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:57934 - \"GET /thermostat/humidity HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:47454 - \"PUT /thermostat/humidity?humidity=200 HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:47460 - \"GET /thermostat/mode HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:57420 - \"PUT /thermostat/mode?mode=sleep HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:57430 - \"GET /thermostat/kb_id HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:40196 - \"PUT /thermostat/kb_id?kb_id=kb_id%202 HTTP/1.1\" 200 OK\n"
      ]
     },
     {
