changed ANswer ki and added handle for ki in ThermostatAPI.ipynb

--- a/shared_data/ThermostatAPI.ipynb
+++ b/shared_data/ThermostatAPI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 74,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 75,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 76,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -78,7 +78,7 @@
      "data": {
       "text/plain": "{'name': 'Thermostat',\n 'temperature': 20,\n 'humidity': 50,\n 'mode': 'cool',\n 'kb_id': 'http://127.0.0.1:8000/thermostat'}"
      },
-     "execution_count": 45,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 77,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -174,29 +174,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "URL:\n",
-      " http://127.0.0.1:8280/rest\n",
-      "\n",
-      "Headers:\n",
-      " {'Content-Type': 'application/json', 'Knowledge-Base-Id': 'http://127.0.0.1:8000/thermostat'}\n",
-      "\n",
-      "Smart connector data:\n",
-      " {'knowledgeBaseId': 'http://127.0.0.1:8000/thermostat', 'knowledgeBaseName': 'Thermostat API v0.0.1', 'knowledgeBaseDescription': 'Thermostat API v0.0.1 for the Smart Home', 'reasonerEnabled': 'false'}\n",
-      "\n",
-      "<Response [200 OK]>\n",
-      "Response text: \n"
-     ]
-    }
-   ],
+   "execution_count": 78,
+   "outputs": [],
    "source": [
-    "# register API in the knowledge engine\n",
-    "import httpx\n",
+    "# Defining constants\n",
     "\n",
     "# Knowledge engine REST API URL\n",
     "URL = \"http://127.0.0.1:8280/rest\"\n",
@@ -205,28 +186,44 @@
     "HEADERS = {\n",
     "    'Content-Type': 'application/json',\n",
     "    'Knowledge-Base-Id': thermostat.kb_id,\n",
-    "}\n",
-    "\n",
+    "}\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# register API in the knowledge engine\n",
+    "import httpx\n",
     "\n",
     "# Creating a smart connector\n",
     "def create_smart_connector():\n",
     "    # Smart connector data\n",
     "    sc_data = {\n",
-    "        \"knowledgeBaseId\": \"http://127.0.0.1:8000/thermostat\",\n",
-    "        \"knowledgeBaseName\": \"Thermostat API v0.0.1\",\n",
+    "        \"knowledgeBaseId\": thermostat.kb_id,\n",
+    "        \"knowledgeBaseName\": thermostat.name,\n",
     "        \"knowledgeBaseDescription\": \"Thermostat API v0.0.1 for the Smart Home\",\n",
     "        \"reasonerEnabled\": \"false\",\n",
     "    }\n",
     "\n",
-    "    # Registering the smart connector\n",
+    "    # Registering the smart connector via the /sc endpoint\n",
     "    response = httpx.post(URL + \"/sc\", headers=HEADERS, json=sc_data)\n",
     "\n",
-    "    print(f'URL:\\n {URL}\\n')\n",
-    "    print(f'Headers:\\n {HEADERS}\\n')\n",
-    "    print(f'Smart connector data:\\n {sc_data}\\n')\n",
-    "    print(response)\n",
-    "    print(f'Response text: {response.text}')\n",
-    "\n",
+    "    print(response.status_code)\n",
+    "    print(response.text)\n",
     "\n",
     "create_smart_connector()"
    ],
@@ -236,43 +233,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 80,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "URL:\n",
-      " http://127.0.0.1:8280/rest\n",
-      "\n",
-      "Headers:\n",
-      " {'Content-Type': 'application/json', 'Knowledge-Base-Id': 'http://127.0.0.1:8000/thermostat'}\n",
-      "\n",
-      "<Response [200 OK]>\n",
-      "Response text:\n",
-      "[{\"knowledgeBaseId\":\"http://127.0.0.1:8000/thermostat\",\"knowledgeBaseName\":\"Thermostat API v0.0.1\",\"knowledgeBaseDescription\":\"Thermostat API v0.0.1 for the Smart Home\",\"reasonerEnabled\":false}]\n"
+      "200\n",
+      "[{\"knowledgeBaseId\":\"http://127.0.0.1:8000/thermostat\",\"knowledgeBaseName\":\"Thermostat\",\"knowledgeBaseDescription\":\"Thermostat API v0.0.1 for the Smart Home\",\"reasonerEnabled\":false}]\n"
      ]
     }
    ],
    "source": [
     "# check if the smart connector is registered\n",
     "def check_smart_connector():\n",
-    "    headers2 = {\n",
-    "        #'accept': 'application/json,\n",
-    "        'Content-Type': 'application/json',\n",
-    "        'Knowledge-Base-Id': \"http://127.0.0.1:8000/thermostat\",\n",
+    "    response = httpx.get(URL + \"/sc\", headers=HEADERS)\n",
+    "    print(response.status_code)\n",
+    "    print(response.text)\n",
     "\n",
-    "    }\n",
-    "\n",
-    "    response = httpx.get(URL + \"/sc\", headers=headers2)\n",
-    "\n",
-    "    print(f'URL:\\n {URL}\\n')\n",
-    "    print(f'Headers:\\n {headers2}\\n')\n",
-    "    print(response)\n",
-    "    print(f'Response text:\\n{response.text}')\n",
-    "\n",
-    "\n",
-    "check_smart_connector()"
+    "check_smart_connector()\n"
    ],
    "metadata": {
     "collapsed": false
@@ -280,48 +259,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 81,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "URL:\n",
-      " http://127.0.0.1:8280/rest\n",
-      "\n",
-      "Headers:\n",
-      " {'Content-Type': 'application/json', 'Knowledge-Base-Id': 'http://127.0.0.1:8000/thermostat'}\n",
-      "\n",
-      "<Response [200 OK]>\n",
-      "Response text:\n",
-      "{\"knowledgeInteractionId\":\"http://127.0.0.1:8000/thermostat/interaction/0285bc86-13d4-4835-a2b7-80f61b3d1523\"}\n"
+      "200\n",
+      "{\"knowledgeInteractionId\":\"http://127.0.0.1:8000/thermostat/interaction/3f6bcf55-9a1d-471f-91aa-716c8bb19fe6\"}\n"
      ]
     }
    ],
    "source": [
     "# register an ANSWER Knowledge Interaction with the smart connector\n",
     "def register_answer_ki():\n",
-    "    headers2 = {\n",
-    "        'Content-Type': 'application/json',\n",
-    "        'Knowledge-Base-Id': \"http://127.0.0.1:8000/thermostat\",\n",
-    "    }\n",
-    "\n",
     "    answer_ki_data = {\n",
     "        \"knowledgeInteractionType\": \"AnswerKnowledgeInteraction\",\n",
     "        \"prefixes\": {\"rdf\": \"http://www.w3.org/1999/02/22-rdf-syntax-ns#\",\n",
-    "                     \"ex\": \"http://example.org/\",\n",
+    "                     \"saref\": \"https://w3id.org/saref#\",\n",
     "                     },\n",
     "\n",
-    "        \"graphPattern\": \"?d rdf:type 'Device' . ?d ex:hasName 'Thermostat'. ?d ex:hasTemperature ?temperature. ?d ex:hasHumidity ?humidity. ?d ex:hasMode ?mode. ?d ex:hasName ?name.\"\n",
+    "        \"graphPattern\": '''?meas rdf:type saref:Measurement .\n",
+    "                            ?meas saref:hasValue ?temp .\n",
+    "                            ?meas saref:isMeasuredIn saref:TemperatureUnit .\n",
+    "                            ?meas saref:hasTimestamp ?timestamp .\n",
+    "                            ?meas saref:isMeasurementOf ?room_id .\n",
+    "                            ?meas saref:relatesToProperty saref:Temperature .\n",
+    "                            ?meas saref:measurementMadeBy ?device_id .'''\n",
     "    }\n",
     "\n",
-    "    response = httpx.post(URL + \"/sc/ki\", headers=headers2, json=answer_ki_data)\n",
-    "\n",
-    "    print(f'URL:\\n {URL}\\n')\n",
-    "    print(f'Headers:\\n {headers2}\\n')\n",
-    "    print(response)\n",
-    "    print(f'Response text:\\n{response.text}')\n",
-    "\n",
+    "    response = httpx.post(URL + \"/sc/ki\", headers=HEADERS, json=answer_ki_data)\n",
+    "    print(response.status_code)\n",
+    "    print(response.text)\n",
     "\n",
     "register_answer_ki()\n"
    ],
@@ -331,40 +300,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 82,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "URL:\n",
-      " http://127.0.0.1:8280/rest\n",
-      "\n",
-      "Headers:\n",
-      " {'Content-Type': 'application/json', 'Knowledge-Base-Id': 'http://127.0.0.1:8000/thermostat'}\n",
-      "\n",
-      "<Response [404 Not Found]>\n",
-      "Response text:\n",
-      "{\"messageType\":\"error\",\"message\":\"This knowledge base has been suspended due to inactivity. Please reregister the knowledge base and its knowledge interactions.\"}\n"
+      "200\n",
+      "[{\"knowledgeInteractionId\":\"http://127.0.0.1:8000/thermostat/interaction/3f6bcf55-9a1d-471f-91aa-716c8bb19fe6\",\"knowledgeInteractionType\":\"AnswerKnowledgeInteraction\",\"communicativeAct\":{\"requiredPurposes\":[\"https://w3id.org/knowledge-engine/InformPurpose\"],\"satisfiedPurposes\":[\"https://w3id.org/knowledge-engine/InformPurpose\"]},\"graphPattern\":\"?meas <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://w3id.org/saref#Measurement> . ?meas <https://w3id.org/saref#hasValue> ?temp . ?meas <https://w3id.org/saref#isMeasuredIn> <https://w3id.org/saref#TemperatureUnit> . ?meas <https://w3id.org/saref#hasTimestamp> ?timestamp . ?meas <https://w3id.org/saref#isMeasurementOf> ?room_id . ?meas <https://w3id.org/saref#relatesToProperty> <https://w3id.org/saref#Temperature> . ?meas <https://w3id.org/saref#measurementMadeBy> ?device_id . \"}]\n"
      ]
     }
    ],
    "source": [
     "# check if the Knowledge Interaction is registered\n",
     "def list_all_kis():\n",
-    "    headers2 = {\n",
-    "        'Content-Type': 'application/json',\n",
-    "        'Knowledge-Base-Id': \"http://127.0.0.1:8000/thermostat\",\n",
-    "    }\n",
-    "\n",
-    "    response = httpx.get(URL + \"/sc/ki\", headers=headers2)\n",
-    "\n",
-    "    print(f'URL:\\n {URL}\\n')\n",
-    "    print(f'Headers:\\n {headers2}\\n')\n",
-    "    print(response)\n",
-    "    print(f'Response text:\\n{response.text}')\n",
-    "\n",
-    "\n",
+    "    response = httpx.get(URL + \"/sc/ki\", headers=HEADERS)\n",
+    "    print(response.status_code)\n",
+    "    print(response.text)\n",
     "list_all_kis()\n"
    ],
    "metadata": {
@@ -373,9 +325,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 72,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "404\n",
+      "{\"messageType\":\"error\",\"message\":\"A Knowledge Base for the given Knowledge-Base-Id cannot be found.\"}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Start waiting for a handle request for the given Knowledge Base Id.\n",
+    "def handle_and_answer():\n",
+    "    response = httpx.get(URL + \"/sc/handle\", headers=HEADERS)\n",
+    "    print(response.status_code)\n",
+    "    print(response.text)\n",
+    "\n",
+    "    handleRequestId = response.json()[\"handleRequestId\"]\n",
+    "    deviceName = response.json()[\"bindingSet\"][0][\"deviceName\"]\n",
+    "    answerBindingSet = response.json()[\"bindingSet\"] #???\n",
+    "\n",
+    "    # Answering the handle request\n",
+    "    answer_data = {\n",
+    "        \"handleRequestId\": handleRequestId,\n",
+    "        \"bindingSet\": bindingSet\n",
+    "    }\n",
+    "\n",
+    "    response = httpx.post(URL + \"/sc/handle\", headers=HEADERS, json=answer_data)\n",
+    "    print(response.status_code)\n",
+    "    print(response.text)\n",
+    "handle_and_answer()"
+   ],
    "metadata": {
     "collapsed": false
    }
